--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -19,107 +19,82 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
+    <title>OnTheDaily.</title>
   </head>
 
   <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+    <header class="head">
+      <h1>Work Day Scheduler</h1>
+      <br>
+       <p id="current" class="lead"></p>
     </header>
+
     <div class="container">
       <!-- Timeblocks go here -->
+
         <div id="hour8" class="row time-block">
-            <div class="col-md-1 hour">
+            <div class="8hour">
                 8:00am
             </div>
-            <textarea class="col-md-10 description">
+            <textarea class="description">
             </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+            <button class="savebtn"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour9" class="row time-block">
-            <div class="col-md-1 hour">
+            <div class="9hour">
                 9:00am
             </div>
-            <textarea class="col-md-10 description">
+            <textarea class="description">
             </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+            <button class="savebtn"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour10" class="row time-block">
-            <div class="col-md-1 hour">
+            <div class="10hour">
                 10:00am
             </div>
-            <textarea class="col-md-10 description">
+            <textarea class="description">
             </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+            <button class="savebtn"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour11" class="row time-block">
-            <div class="col-md-1 hour">
+            <div class="11hour">
                 11:00am
             </div>
-            <textarea class="col-md-10 description">
+            <textarea class="description">
             </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+            <button class="savebtn"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour12" class="row time-block">
-            <div class="col-md-1 hour">
+            <div class="12hour">
                 12:00pm
             </div>
-            <textarea class="col-md-10 description">
+            <textarea class="description">
             </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+            <button class="savebtn"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour13" class="row time-block">
-            <div class="col-md-1 hour">
+            <div class="13hour">
                 1:00pm
             </div>
-            <textarea class="col-md-10 description">
+            <textarea class="description">
             </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+            <button class="savebtn"><i class="fas fa-save"></i></button>
         </div>
-
+    
         <div id="hour14" class="row time-block">
-            <div class="col-md-1 hour">
+            <div class="14hour">
                 2:00pm
             </div>
-            <textarea class="col-md-10 description">
+            <textarea class="description">
             </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+            <button class="savebtn"><i class="fas fa-save"></i></button>
         </div>
 
-        <div id="hour15" class="row time-block">
-            <div class="col-md-1 hour">
-                3:00pm
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-
-        <div id="hour16" class="row time-block">
-            <div class="col-md-1 hour">
-                4:00pm
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-
-        <div id="hour17" class="row time-block">
-            <div class="col-md-1 hour">
-                5:00pm
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
